--- a/landingpage.css
+++ b/landingpage.css
@@ -202,7 +202,7 @@ header{
     }
 
      .footer-colm .quote{
-        color: #000;
+        color: #fff;
         font-size: 12px;
         font-weight: 900px;
         text-transform: uppercase;
